Fix gap on bottom od image

--- a/www/card.css
+++ b/www/card.css
@@ -243,6 +243,7 @@ body.search {
 }
 
 .image {
+    display: block;
     flex-shrink: 0;
     object-fit: contain;
     width: 100%;
